# MSE

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: main.py
app/: streamlit_app.py
config/: default.toml
data/: README.md
data/sample/: business_workflows.jsonl
docs/: architecture.md  frontend_architecture.md  methodology.md  model_specialization.md  phases.md
docs/evaluation/: README.md  classifier_comparison.json  hf_query_classifier_metrics.json  query_classifier_metrics.json
docs/report/: README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  data.js  styles.css
notebooks/: README.md  phase_1_dataset_preparation.ipynb  phase_2_classifier_training.ipynb
scripts/: compare_query_classifiers.py  download_wixqa.py  evaluate_sample.py  generate_synthetic_qac.py  preprocess_dataset.py  train_hf_query_classifier.py  train_query_classifier.py  train_t5_query_classifier.py
src/aragbiz/: __init__.py  classifier.py  config.py  data.py  evaluation.py  factory.py  feedback.py  generation.py  knowledge.py  knowledge_store.py  pipeline.py  preprocessing.py  retrieval.py  routing.py  schemas.py
tests/: test_api.py  test_classifier_training.py  test_hf_classifier.py  test_knowledge_processing.py  test_pipeline.py  test_preprocessing.py  test_retrieval_routing.py  test_t5_classifier.py  test_wixqa_preprocessing.py
