[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aragbiz"
version = "0.1.0"
description = "Adaptive RAG system for business workflow question answering"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
app = ["streamlit>=1.32", "requests>=2.31"]
ml = ["datasets>=2.18", "transformers>=4.40", "accelerate>=0.28", "scikit-learn>=1.4", "torch>=2.1"]
eval = ["ragas>=0.1.7"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
